# muellabfuhr_reminder_python

./: Dockerfile  README.md  main.py  pyproject.toml
tests/: test_main.py
